staging/src/k8s.io/api/testdata/v1.24.0/admissionregistration.k8s.io.v1.ValidatingWebhookConfiguration.json
{
  "kind": "ValidatingWebhookConfiguration",
  "apiVersion": "admissionregistration.k8s.io/v1",
  "metadata": {
    "name": "nameValue",
    "generateName": "generateNameValue",
    "namespace": "namespaceValue",
    "selfLink": "selfLinkValue",
    "uid": "uidValue",
    "resourceVersion": "resourceVersionValue",
    "generation": 7,
    "creationTimestamp": "2008-01-01T01:01:01Z",
    "deletionTimestamp": "2009-01-01T01:01:01Z",
    "deletionGracePeriodSeconds": 10,
    "labels": {
      "labelsKey": "labelsValue"
    },
    "annotations": {
      "annotationsKey": "annotationsValue"
    },
    "ownerReferences": [
      {
        "apiVersion": "apiVersionValue",
        "kind": "kindValue",
        "name": "nameValue",
        "uid": "uidValue",
        "controller": true,
        "blockOwnerDeletion": true
      }
    ],
    "finalizers": [
      "finalizersValue"
    ],
    "clusterName": "clusterNameValue",
    "managedFields": [
      {
        "manager": "managerValue",
        "operation": "operationValue",
        "apiVersion": "apiVersionValue",
        "time": "2004-01-01T01:01:01Z",
        "fieldsType": "fieldsTypeValue",
        "fieldsV1": {},
        "subresource": "subresourceValue"
      }
    ]
  },
  "webhooks": [
    {
      "name": "nameValue",
      "clientConfig": {
        "url": "urlValue",
        "service": {
          "namespace": "namespaceValue",
          "name": "nameValue",
          "path": "pathValue",
          "port": 4
        },
        "caBundle": "Ag=="
      },
      "rules": [
        {
          "operations": [
            "operationsValue"
          ],
          "apiGroups": [
            "apiGroupsValue"
          ],
          "apiVersions": [
            "apiVersionsValue"
          ],
          "resources": [
            "resourcesValue"
          ],
          "scope": "scopeValue"
        }
      ],
      "failurePolicy": "failurePolicyValue",
      "matchPolicy": "matchPolicyValue",
      "namespaceSelector": {
        "matchLabels": {
          "matchLabelsKey": "matchLabelsValue"
        },
        "matchExpressions": [
          {
            "key": "keyValue",
            "operator": "operatorValue",
            "values": [
              "valuesValue"
            ]
          }
        ]
      },
      "objectSelector": {
        "matchLabels": {
          "matchLabelsKey": "matchLabelsValue"
        },
        "matchExpressions": [
          {
            "key": "keyValue",
            "operator": "operatorValue",
            "values": [
              "valuesValue"
            ]
          }
        ]
      },
      "sideEffects": "sideEffectsValue",
      "timeoutSeconds": 7,
      "admissionReviewVersions": [
        "admissionReviewVersionsValue"
      ]
    }
  ]
}
